# contracts/openapi.json
@@ -3523,6 +3523,11 @@
       "UserCreate": {
         "description": "Kullanıcı kayıt.",
         "properties": {
+          "adult_confirmed": {
+            "const": true,
+            "title": "Adult Confirmed",
+            "type": "boolean"
+          },
           "daily_calorie_target": {
             "default": 2000.0,
             "maximum": 10000.0,
@@ -3562,7 +3567,8 @@
         "required": [
           "email",
           "password",
-          "full_name"
+          "full_name",
+          "adult_confirmed"
         ],
         "title": "UserCreate",
         "type": "object"
